gitops/kubernetes/manifests/00-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: MyApp
  labels:
    app: MyApp
spec:
  replicas: 2
  strategy:
    type: RollingUpdate  
  selector:
    matchLabels:
      app: MyApp
  template:
    metadata:
      labels:
        app: MyApp
    spec:
      serviceAccountName: MyApp
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: web
        image: devinfrabr/php-8.3:latest
        ports:
          - name: http
            containerPort: 80
        volumeMounts:
        - name: envVars
          mountPath: "/var/www/app/"
          readOnly: true                
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5   
          failureThreshold: 30
          periodSeconds: 10  
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5 
          failureThreshold: 30
          periodSeconds: 10 
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: true
      #nodeSelector:
      #  disktype: ssd
      #affinity:
      #  nodeAffinity:
      #    requiredDuringSchedulingIgnoredDuringExecution:
      #      nodeSelectorTerms:
      #      - matchExpressions:
      #        - key: node-type
      #          operator: In
      #          values:
      #          - nginx-node
      #  podAntiAffinity:
      #    requiredDuringSchedulingIgnoredDuringExecution:
      #    - labelSelector:
      #        matchExpressions:
      #        - key: app
      #          operator: In
      #          values:
      #          - nginx
      #      topologyKey: "kubernetes.io/hostname"  
  volumes:
  - name: envVars
    configMap:
      name: MyApp
