gitops/kubernetes/manifests/10-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: MyApp
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: MyApp
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
