gitops/kubernetes/manifests/30-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: MyApp
  labels:
    app: MyApp
  annotations: 
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"  
spec:
  #ingressClassName: nginx
  rules:
    - host: MyApp.mydomain.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: MyApp
                port:
                  number: 80 
  tls:
    - hosts: MyApp.mydomain.com.br
      secretName: ssl-MyApp.mydomain.com.br
